fix: adjust layout alignment and resolved bug

--- a/client/src/pages/HomePage/Home.module.css
+++ b/client/src/pages/HomePage/Home.module.css
@@ -30,15 +30,14 @@
 }
 
 
-
 .cardsWrapper {
     display: flex;
-    gap: 30px;
-    flex-wrap: wrap; 
     justify-content: center;
-    margin-top: 0;
+    gap: 30px;
+    width: 100%;
+    margin-top: 0px; 
+    padding-bottom: 40px;
 }
-
 
 .roleCard {
     background: white;
@@ -105,33 +104,41 @@
     margin-bottom: 40px;
 } */
  
-.infoSection {
-    width: 100%;
-    max-width: 900px;
-    margin-bottom: 0px;
-    text-align: center;
-    direction: rtl;
-}
 
 .infoTitle {
     font-size: 1.8rem;
     color: #2c3e50;
     margin-bottom: 20px;
 }
-
-.stepsGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+.infoSection {
     width: 100%;
-    direction: rtl; 
+    max-width: 1000px; 
+    margin: 0 auto 10px auto; 
+    text-align: center;
+    direction: rtl;
 }
 
+.stepsGrid {
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    direction: rtl; 
+}
 .step {
+    flex: 1; 
+    min-width: 250px; 
+    max-width: 300px; 
     background: #eeeff3;
-    padding: 15px;
+    padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.03);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .stepIcon {
